--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
