--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
